// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeSpanDisplay /> should ... 1`] = `
<TextStyled
  as="span"
  color="#96a2b0"
  fontSize="small"
>
  <TimeSpanDisplay
    date="2017-12-01T10:00:00Z"
    withSeconds={true}
  />
   —
   
  <TimeSpanDisplay
    date="2017-12-01T12:00:00Z"
    withSeconds={true}
  />
</TextStyled>
`;

exports[`<TimeSpanDisplay /> should render the component with seconds 1`] = `
<Text
  as="span"
  color="#96a2b0"
  fontSize="small"
>
  <TimeSpanDisplay
    date="2017-12-01T10:00:00Z"
    withSeconds={true}
  />
   —
   
  <TimeSpanDisplay
    date="2017-12-01T12:00:00Z"
    withSeconds={true}
  />
</Text>
`;

exports[`<TimeSpanDisplay /> should render the component without seconds 1`] = `
<Text
  as="span"
  color="#96a2b0"
  fontSize="small"
>
  <TimeSpanDisplay
    date="2017-12-01T10:00:00Z"
    withSeconds={false}
  />
   —
   
  <TimeSpanDisplay
    date="2017-12-01T12:00:00Z"
    withSeconds={false}
  />
</Text>
`;
